# akd

./: .codecov.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  docker-compose.ci.yml  docker-compose.yml
.github/: codecov.yml  dependabot.yml
.github/workflows/: aws.yml  ci.yml  coverage.yml  mysql.yml  publish.yml  s3.yml  wait-for-akd-core-publish.sh  wait-for-akd-publish.sh  wait-for-crate-dependency.sh
akd/: Cargo.toml
akd/benches/: azks.rs  common.rs  directory.rs  kd_benches.rs
akd/src/: append_only_zks.rs  auditor.rs  build.rs  client.rs  directory.rs  errors.rs  helper_structs.rs  history_tree_node.rs  lib.rs  local_auditing.rs  node_label.rs  node_state.rs  proof_structs.rs  serialization.rs  test_utils.rs  tests.rs  tree_node.rs  utils.rs
akd/src/auditor/: mod.rs  wasm.rs
akd/src/ecvrf/: ecvrf.rs  ecvrf_impl.rs  mod.rs  no_vrf.rs  tests.rs  traits.rs
akd/src/primitives/: akd_vrf.rs  client_vrf.rs  mod.rs
akd/src/proto/: audit.proto  audit.rs  mod.rs
akd/src/storage/: manager.rs  memory.rs  mod.rs  node_state.rs  storage.rs  tests.rs  timed_cache.rs  transaction.rs  types.rs
akd/src/storage/cache/: high_parallelism.rs  mod.rs  tests.rs
akd/src/storage/caches/: basic.rs  high_parallelism.rs  mod.rs
akd/src/storage/manager/: mod.rs  tests.rs
akd/src/tests/: mod.rs  test_core_protocol.rs  test_errors.rs  test_preloads.rs
akd_audit_quorum/: Cargo.toml  README.MD
akd_audit_quorum/src/: build.rs  lib.rs  storage.rs
akd_audit_quorum/src/comms/: mod.rs  nonces.rs
akd_audit_quorum/src/crypto/: mod.rs  tests.rs
akd_audit_quorum/src/node/: messages.rs  mod.rs
akd_audit_quorum/src/proto/: inter-node.proto  inter_node.rs  mod.rs
akd_client/: Cargo.toml
akd_client/src/: build.rs  converters.rs  ecvrf.rs  hash.rs  lib.rs  tests.rs  types.rs  utils.rs  verify.rs  wasm.rs
akd_client/src/proto/: mod.rs  tests.rs  types.rs
akd_client/src/proto/raw/: types.proto
akd_core/: Cargo.toml
akd_core/benches/: parallel_vrfs.rs
akd_core/src/: build.rs  crypto.rs  directory_trait.rs  lib.rs  types.rs  utils.rs
akd_core/src/configuration/: experimental.rs  mod.rs  traits.rs  whatsapp_v1.rs
akd_core/src/ecvrf/: ecvrf_impl.rs  mod.rs  tests.rs  traits.rs
akd_core/src/hash/: blake3.rs  mod.rs  sha2.rs  sha3.rs  tests.rs
akd_core/src/proto/: mod.rs  tests.rs
akd_core/src/proto/specs/: mod.rs  types.proto  types.rs
akd_core/src/types/: mod.rs
akd_core/src/types/node_label/: mod.rs  tests.rs
akd_core/src/verify/: base.rs  history.rs  lookup.rs  mod.rs
akd_local_auditor/: Cargo.toml  docker-compose.yml
akd_local_auditor/src/: common_test.rs  console_log.rs  main.rs
akd_local_auditor/src/auditor/: mod.rs
akd_local_auditor/src/s3/: mod.rs
akd_local_auditor/src/storage/: dynamodb.rs  mod.rs  s3.rs
akd_local_auditor/src/storage/dynamodb/: mod.rs  test.rs
akd_local_auditor/src/storage/s3/: mod.rs  test.rs
akd_local_auditor/src/ui/: mod.rs
akd_local_auditor/src/ui/auditor/: breadcrumb.rs  mod.rs
akd_local_auditor/src/ui/logstream/: mod.rs
akd_local_auditor/src/ui/settings/: mod.rs  saved_state.rs
akd_mysql/: Cargo.toml  README.md
akd_mysql/src/: lib.rs  mysql.rs  mysql_db_tests.rs  mysql_storables.rs
akd_quorum/: Cargo.toml  README.md
akd_quorum/src/: build.rs  comms.rs  crypto.rs  lib.rs  storage.rs
akd_quorum/src/comms/: mod.rs  nonces.rs
akd_quorum/src/node/: inter_node_logic.rs  messages.rs  mod.rs  node_logic.rs  node_states.rs
akd_quorum/src/proto/: inter-node.proto  inter_node.rs  mod.rs
akd_test_tools/: Cargo.toml
akd_test_tools/src/: lib.rs  main.rs  test_suites.rs
akd_test_tools/src/fixture_generator/: generator.rs  mod.rs  parser.rs
akd_test_tools/src/fixture_generator/examples/: example_tests.rs  experimental.yaml  mod.rs  test.yaml  whatsapp_v1.yaml
akd_test_tools/src/fixture_generator/reader/: mod.rs  tests.rs  yaml.rs
akd_test_tools/src/fixture_generator/writer/: mod.rs  yaml.rs
akd_traits/: Cargo.toml
akd_traits/src/: errors.rs  lib.rs  traits.rs  types.rs
akd_traits/src/bench/: criterion_benches.rs  mod.rs  stats.rs
benches/: azks.rs  seemless.rs
examples/: Cargo.toml  README.md  measurements.rs  seemless_directory_examples.rs
examples/src/: main.rs
examples/src/fixture_generator/: generator.rs  mod.rs
examples/src/fixture_generator/examples/: example_tests.rs  experimental.yaml  whatsapp_v1.yaml
examples/src/fixture_generator/reader/: mod.rs  tests.rs  yaml.rs
examples/src/fixture_generator/writer/: mod.rs  yaml.rs
examples/src/mysql_demo/: commands.rs  directory_host.rs  logs.rs  mod.rs  mysql.rs  mysql_storables.rs
examples/src/mysql_demo/tests/: memory_tests.rs  mod.rs  mysql_db_tests.rs  mysql_tests.rs  test_util.rs
examples/src/scaling_bench/: akd_setup.rs  cache.rs  mod.rs  runner.rs  table.rs
examples/src/test_vectors/: experimental.yaml  mod.rs  whatsapp_v1.yaml
examples/src/wasm_client/: mod.rs
examples/src/whatsapp_kt_auditor/: README.md  auditor.rs  mod.rs
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs  main.rs  memory_tests.rs  mysql_dir_tests.rs  mysql_tests.rs  test_util.rs
integration_tests/src/fixture_generator/: generator.rs  mod.rs  parser.rs
integration_tests/src/fixture_generator/examples/: example_tests.rs
integration_tests/src/fixture_generator/reader/: mod.rs  tests.rs  yaml.rs
integration_tests/src/fixture_generator/writer/: mod.rs
poc/: Cargo.toml
poc/doc/: flaming.md  metrics_log.txt  publish_metrics_log.txt
poc/src/: commands.rs  directory_host.rs  logs.rs  main.rs
src/: append_only_zks.rs  auditor.rs  client.rs  directory.rs  errors.rs  history_tree_node.rs  lib.rs  node_state.rs  proof_structs.rs  seemless_auditor.rs  seemless_client.rs  seemless_directory.rs  serialization.rs  storage.rs  tests.rs  utils.rs
src/storage/: mod.rs  tests.rs  transaction.rs  types.rs
src/storage/memory/: async.rs  mod.rs  newdb.rs
src/storage/mysql/: async.rs  mod.rs  new_db.rs  timed_cache.rs
tools/: sync_fork.sh
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+1 files in other folders)
