[package]
name = "akd_audit_quorum"
version = "0.4.0"
authors = ["Sean Lawlor <seanlawlor@fb.com>", "Kevin Lewi <klewi@fb.com>"]
description = "Validation of a key directory's latest epoch using a quorum of members which validate the append-only nature of the AKD"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["key-transparency", "akd", "akd-validation"]
repository = "https://github.com/novifinancial/akd"
build = "src/build.rs"

[dependencies]
winter-crypto = "0.2"
winter-utils = "0.2"
winter-math = "0.2"
akd = { path = "../akd", version = "^0.4.0" }
log = { version = "0.4.8", features = ["kv_unstable"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.10", features = ["full"] }
async-recursion = "0.3"
once_cell = "1"
protobuf = "=2.8.1"
itertools = "0.10.3"
futures = { version = "0.3.13", features = ["async-await", "compat"] }

shamirsecretsharing = "0.1"

[build-dependencies]
protoc = "=2.8.1"
protoc-rust = "=2.8.1"

[dev-dependencies]
serial_test = "0.5"
