[package]
name = "akd_client"
version = "0.7.2"
authors = ["Harjasleen Malvai <hmalvai@fb.com>", "Kevin Lewi <klewi@fb.com>", "Sean Lawlor <seanlawlor@fb.com>"]
description = "Client verification companion for the auditable key directory with limited dependencies."
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["key-transparency", "akd"]
repository = "https://github.com/novifinancial/akd"
readme = "../README.md"
## Uncomment for automated building of the protobuf Rust sources. Necessary if the .proto specs change
# build = "src/build.rs"
#
# [build-dependencies]
# protoc = "=2.8.1"
# protoc-rust = "=2.8.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
akd = { path = "../akd", features = ["vrf", "public-tests"], optional = true }
blake3 = { version = "1.3.1", optional = true, default-features = false }
curve25519-dalek = { version = "3", optional = true, default-features = false }
ed25519-dalek = { version = "1", optional = true, default-features = false }
protobuf_crate = { package = "protobuf", version = "=2.8.1", optional = true }
serde_crate = { package = "serde", version = "1.0", optional = true, features = ["derive"], default-features = false }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10.1", optional = true, default-features = false }
sha3 = { version = "0.10.0", optional = true, default-features = false }
wasm-bindgen = { version = "0.2.79", optional = true, features = ["serde-serialize"] }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
winter-crypto = { version = "0.2", optional = true }
winter-utils = { version = "0.2", optional = true }

[features]
# Disable all STD for the crate
nostd = []
# Enable converters API from akd to akd_client types
converters = ["akd", "winter-crypto", "winter-utils"]
# Supported hash functions
sha512 = ["sha2"]
sha256 = ["sha2"]
sha3_256 = ["sha3"]
sha3_512 = ["sha3"]
# Enable web assembly compilation of the AKD client crate
wasm = ["wasm-bindgen", "serde"]
# Support serde-based serialization
serde = ["serde_crate", "serde_json", "ed25519-dalek/serde"]
# Support protobuf based serialization
protobuf = ["protobuf_crate"]
# Verify with Verifiable random functions (VRFs)
vrf = ["curve25519-dalek", "ed25519-dalek"]

# Default feature mix (blake3 + VRFs enabled)
default = ["blake3", "vrf"]

[dev-dependencies]
akd = { path = "../akd", features = ["vrf", "public-tests"] }
winter-crypto = "0.2"
winter-utils = "0.2"
winter-math = "0.2"
tokio = { version = "1.10", features = ["full"] }
wasm-bindgen-test = "0.3.13"
hex = "0.4"
rand = { version = "0.7" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
