[package]
name = "akd_client"
version = "0.9.0-pre.1"
authors = ["Harjasleen Malvai <hmalvai@fb.com>", "Kevin Lewi <klewi@fb.com>", "Sean Lawlor <seanlawlor@fb.com>"]
description = "Client verification companion for the auditable key directory with limited dependencies."
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["key-transparency", "akd"]
repository = "https://github.com/facebook/akd"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Disable all STD for the crate
nostd = ["akd_core/nostd"]
# Supported configurations
whatsapp_v1 = ["akd_core/whatsapp_v1"]
experimental = ["akd_core/experimental"]
# Enable web assembly compilation of the AKD client crate
wasm = ["wasm-bindgen", "dep:protobuf", "akd_core/protobuf"]
protobuf_serialization = ["dep:protobuf", "akd_core/protobuf"]

# Default feature mix (experimental)
default = ["experimental"]

[dependencies]
## Required dependencies ##
akd_core = { path = "../akd_core", default-features = false, features = ["vrf"] }
hex = "0.4"

## Optional dependencies ##
protobuf = { version = "3.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
akd = { path = "../akd", default-features = false }
paste = "1"
