[package]
name = "akd_core"
version = "0.9.0"
authors = ["Harjasleen Malvai <hmalvai@fb.com>", "Kevin Lewi <klewi@fb.com>", "Sean Lawlor <seanlawlor@fb.com>"]
description = "Core utilities for the auditable-key-directory suite of crates (akd and akd_client)"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["key-transparency", "akd"]
repository = "https://github.com/novifinancial/akd"
readme = "../README.md"
# Uncomment for automated building of the protobuf Rust sources. Necessary if the .proto specs change
build = "src/build.rs"

[build-dependencies]
protobuf-codegen = "3.2"
protobuf-parse = "3.2"

[features]
# Disable all STD for the crate
nostd = []
# Supported SHA-based hash functions
sha512 = ["sha2"]
sha256 = ["sha2"]
# truncated Sha512 hash to 256 bits
sha512_256 = ["sha2"]
sha3_256 = ["sha3"]
sha3_512 = ["sha3"]
# Include the VRF verification logic
vrf = ["ed25519-dalek", "curve25519-dalek/std"]
serde_serialization = ["serde", "serde_bytes", "ed25519-dalek/serde"]
# Parallelize VRF calculations during publish
parallel_vrf = ["tokio"]

bench = ["parallel_vrf", "blake3", "vrf", "tokio/rt-multi-thread"]

# Default features mix (with blake3 as the default hash function)
default = ["vrf", "blake3"]

[dependencies]
## Required dependencies ##
async-trait = "0.1"
curve25519-dalek = { version = "3", default-features = false, features = ["u64_backend"], optional = true }
ed25519-dalek = { version = "1", optional = true }
hex = "0.4"

## Optional dependencies ##
blake3 = { version = "1.3", optional = true, default-features = false }
protobuf = { version = "3.2", optional = true }
rand = { version = "0.7", optional = true }
sha2 = { version = "0.10", optional = true, default-features = false }
sha3 = { version = "0.10", optional = true, default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }
tokio = { version = "1.21", features = ["rt"], optional = true }

[dev-dependencies]
bincode = "1"
proptest = "1.0"
proptest-derive = "0.3"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
criterion = "0.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[[bench]]
name = "parallel_vrfs"
harness = false
required-features = ["bench"]
