[package]
name = "akd_local_auditor"
default-run = "akd_local_auditor"
version = "0.0.0"
authors = ["Sean Lawlor <seanlawlor@fb.com>"]
edition = "2021"
publish = false

[features]
# Supported configurations
whatsapp_v1 = ["akd/whatsapp_v1"]
default = ["whatsapp_v1"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = "0.47"
aws-sdk-dynamodb = "0.17"
aws-sdk-s3 = "0.17"
aws-smithy-http = "0.47"
aws-types = { version = "0.47", features = ["hardcoded-credentials"] }
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2.0.0"
dirs = "4"
directories-next = "2"
hex = "0.4.3"
http = "0.2"
iced = { version = "0.5", default-features = false, features = ["glow", "tokio", "qr_code"] }
log = { version = "0.4.8", features = ["kv_unstable"] }
once_cell = "1"
qr2term = "0.3"
rand = "0.8"
rustyrepl = { version = "0.2", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thread-id = "3"
tokio = { version = "1.21", features = ["full"] }
tokio-stream = "0.1"

akd = { path = "../akd", features = ["public_tests", "public_auditing", "whatsapp_v1"] }

[dev-dependencies]
ctor = "0.1"
