[package]
name = "akd_traits"
version = "0.12.0-pre.12"
authors = ["akd contributors"]
description = "Abstract trait and framework for key directories"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/facebook/akd"
publish = false

[features]
bench = ["rand", "dep:criterion", "dep:tokio"]
rand = ["dep:rand"]
serde = ["dep:serde", "dep:hex"]

[dependencies]
async-trait = "0.1"
criterion = { version = "0.5", optional = true }
hex = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
