[package]
name = "examples"
version = "0.0.0"
authors = ["akd contributors"]
edition = "2021"
publish = false


[[bin]]
name = "akd-examples"
path = "src/main.rs"
bench = false
doc = false


[dependencies]
anyhow = "1"
async-trait = "0.1"
colored = "2.0.0"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.10"
hex = "0.4"
indicatif = "0.17"
log = { version = "0.4.8", features = ["kv_unstable"] }
multi_log = "0.1"
once_cell = "1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thread-id = "4"
tokio = { version = "1.21", features = ["full"] }
xml-rs = "0.8"
reqwest = "0.11"

akd = { path = "../akd", features = ["public_tests", "public_auditing", "whatsapp_v1", "experimental"] }
akd_mysql = { path = "../akd_mysql" }

[dev-dependencies]
serial_test = "*"
