[package]
name = "examples"
version = "0.12.0-pre.3"
authors = ["akd contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false


[[bin]]
name = "akd-examples"
path = "src/main.rs"
bench = false
doc = false


[dependencies]
anyhow = "1"
async-trait = "0.1"
colored = "2"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
hex = "0.4"
indicatif = "0.17"
log = { version = "0.4", features = ["kv_unstable"] }
multi_log = "0.1"
mysql_async = "0.32"
mysql_common = "0.31"
once_cell = "1"
protobuf = "3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thread-id = "4"
tokio = { version = "1", features = ["full"] }
xml-rs = "0.8"
reqwest = "0.11"
regex = "1"
serde_yaml = "0.9"
wasm-bindgen = "0.2"

akd = { path = "../akd", features = [
    "public_tests",
    "public_auditing",
    "whatsapp_v1",
    "experimental",
] }
akd_core = { path = "../akd_core" }

[dev-dependencies]
serial_test = "2"
assert_fs = "1"
paste = "1"
wasm-bindgen-test = "0.3"
