[package]
name = "akd_integration_tests"
version = "0.0.0"
authors = ["Harjasleen Malvai <hmalvai@fb.com>", "Kevin Lewi <klewi@fb.com>", "Sean Lawlor <seanlawlor@fb.com>"]
edition = "2018"
publish = false

[features]
high_parallelism = ["akd/high_parallelism"]
memory_pressure = ["akd/memory_pressure"]
limited_memory_test = []

[dependencies]
winter-crypto = "0.2"
winter-math = "0.2"
akd = { path = "../akd", features = ["public-tests", "rand", "serde_serialization"] }

[dev-dependencies]
log = { version = "0.4.8", features = ["kv_unstable"] }
tokio = { version = "1.10", features = ["full"] }
serial_test = "*"
mysql_async = "0.31"
rand = "0.7"
once_cell = "1"
thread-id = "3"
multi_log = "0.1"
hex = "0.4.3"

akd_mysql = { path = "../akd_mysql" }
akd_test_tools = { path = "../akd_test_tools" }
