[package]
name = "akd_app"
default-run = "akd_app"
version = "0.1.0"
authors = ["Harjasleen Malvai <hmalvai@fb.com>", "Kevin Lewi <klewi@fb.com>", "Sean Lawlor <seanlawlor@fb.com>"]
edition = "2018"

[dependencies]
winter-crypto = "0.1"
winter-math = "0.1"
tokio = { version = "0.2", features = ["full"] }
colored = "2.0.0"
hex = "0.4.3"
structopt = "0.3.13"
rand = "0.8"
log = { version = "0.4.8", features = ["kv_unstable"] }
once_cell = "1"
thread-id = "3"
multi_log = "0.1"
clap = "2"

akd = { path = "../akd" }
akd_mysql = { path = "../akd_mysql" }

[dev-dependencies]
serial_test = "*"
