[package]
name = "akd_app"
default-run = "akd_app"
version = "0.0.0"
authors = ["Harjasleen Malvai <hmalvai@fb.com>", "Kevin Lewi <klewi@fb.com>", "Sean Lawlor <seanlawlor@fb.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.21", features = ["full"] }
colored = "2.0.0"
hex = "0.4.3"
rand = "0.8"
log = { version = "0.4.8", features = ["kv_unstable"] }
once_cell = "1"
thread-id = "3"
multi_log = "0.1"
clap = { version = "4", features = ["derive"] }

akd = { path = "../akd", features = ["public-tests"] }
akd_mysql = { path = "../akd_mysql" }

[dev-dependencies]
serial_test = "*"
